[feature 162755087] fix gap between links and navbar

--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,10 @@ body {
   margin: 0;
 }
 
-.navbar a:hover,
-.dropdown:hover .dropbtn {
+.navbar a:hover {
   background-color: #0277bd;
+  color: #fff;
+  padding: 20px;
 }
 
 .dropdown-content {
@@ -133,12 +134,10 @@ body {
 }
 
 header.topbar {
-  background-color: #f8f6f6;
+  background-color: #f5f5f5;
   position: fixed;
   width: 100%;
   height: 60px;
-  opacity: 0.7;
-  z-index: 1;
   top: 0;
   left: 0;
 }
